1.优化系统调用的相关代码